fixed dynamic visibility of title in header

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,7 @@
 
   h1 {
     background-color: rgba(0,0,0,0);
+    visibility: hidden;
   }
 
 }
